--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,18 +20,18 @@ services:
       start_period: 10s
 
   # Development service with hot reload
-  dev:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: tax-tracker-dev
-    ports:
-      - "8000:8000"
-    volumes:
-      - .:/app
-      - /app/__pycache__
-    environment:
-      - PYTHONUNBUFFERED=1
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
-    profiles:
-      - dev
+  # dev:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   container_name: tax-tracker-dev
+  #   ports:
+  #     - "8000:8000"
+  #   volumes:
+  #     - .:/app
+  #     - /app/__pycache__
+  #   environment:
+  #     - PYTHONUNBUFFERED=1
+  #   command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+  #   profiles:
+  #     - dev
